tests222/tests2/test138.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: variable z is not defined
^
